--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="alertDBContext"    connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\alertDatabase.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
