Added connection strings to the web.config

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -9,8 +9,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="StoringenModels" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\m88_d\Documents\alertDatabase.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+    <add name="StoringDBContext"
+         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Storingen.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    <add name="ProductDBContext"
+     connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Producten.mdf;Integrated Security=True"
+     providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
