--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -12,12 +12,9 @@
     <add name="DefaultConnection"
          connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" 
          providerName="System.Data.SqlClient" />
-    <add name="StoringDBContext"
-         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Storingen.mdf;Integrated Security=True"
+    <add name="AlertToolContext"
+         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\UCAlertDatabase.mdf;Integrated Security=True"
          providerName="System.Data.SqlClient" />
-    <add name="ProductDBContext"
-     connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Producten.mdf;Integrated Security=True"
-     providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
