--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AlertToolContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Klant.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Storing.cs" />
