--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -29,7 +29,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <globalization uiCulture="nl-NL"/>
+    <globalization enableClientBasedCulture="false" uiCulture="nl-NL" culture="nl-NL"/>
   </system.web>
   <system.webServer>
     <modules>
