--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -9,12 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection"
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" 
-         providerName="System.Data.SqlClient" />
-    <add name="AlertToolContext"
-         connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\UCAlertDatabase.mdf;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -29,7 +25,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <globalization enableClientBasedCulture="false" uiCulture="nl-NL" culture="nl-NL"/>
+    <globalization enableClientBasedCulture="false" uiCulture="nl-NL" culture="nl-NL" />
   </system.web>
   <system.webServer>
     <modules>
@@ -98,5 +94,5 @@
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
-  </system.codedom> 
+  </system.codedom>
 </configuration>
