--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -238,6 +238,9 @@
     <Compile Include="Models\Storingen.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagrams.cs">
+      <DependentUpon>AlertToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -333,16 +336,16 @@
     <Content Include="Views\Producten\Details.cshtml" />
     <Content Include="Views\Producten\Edit.cshtml" />
     <Content Include="Views\Producten\Index.cshtml" />
-    <Content Include="Views\Storingen\Create.cshtml" />
-    <Content Include="Views\Storingen\Delete.cshtml" />
-    <Content Include="Views\Storingen\Details.cshtml" />
-    <Content Include="Views\Storingen\Edit.cshtml" />
-    <Content Include="Views\Storingen\Index.cshtml" />
     <Content Include="Views\Klanten\Create.cshtml" />
     <Content Include="Views\Klanten\Delete.cshtml" />
     <Content Include="Views\Klanten\Details.cshtml" />
     <Content Include="Views\Klanten\Edit.cshtml" />
     <Content Include="Views\Klanten\Index.cshtml" />
+    <Content Include="Views\Storingen\Create.cshtml" />
+    <Content Include="Views\Storingen\Delete.cshtml" />
+    <Content Include="Views\Storingen\Details.cshtml" />
+    <Content Include="Views\Storingen\Edit.cshtml" />
+    <Content Include="Views\Storingen\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
