added font awesome for nice icons and... added rapporteren controller for backend support of the rapporteren views. changed the emailviewcontoller - removed the 2 other models and added a list of Recipients to the email model styled the rapporteren index screen( icons can be changed at a later date) Made all the rapporteren views Started making the default form for reporting a "storing"

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -249,7 +249,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -263,6 +266,7 @@
       <DependentUpon>AlertToolModel.edmx</DependentUpon>
       <LastGenOutput>AlertToolModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\projectScripts\generalscript.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -275,7 +279,11 @@
     <Content Include="Models\AlertToolModel.edmx.diagram">
       <DependentUpon>AlertToolModel.edmx</DependentUpon>
     </Content>
-    <Content Include="ClassDiagram1.cd" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="Properties\PublishProfiles\ToFile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
@@ -349,6 +357,10 @@
     <Content Include="Views\Storingen\Details.cshtml" />
     <Content Include="Views\Storingen\Edit.cshtml" />
     <Content Include="Views\Storingen\Index.cshtml" />
+    <Content Include="Views\Rapporteren\Melding.cshtml" />
+    <Content Include="Views\Rapporteren\MeldingMetSMS.cshtml" />
+    <Content Include="Views\Rapporteren\MeldingMetEmail.cshtml" />
+    <Content Include="Views\Rapporteren\MeldingMetEmailEnSMS.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
