Added meta content for storingen and producten models The metadata is for keeping attributes for the models after a database update

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -234,6 +234,8 @@
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Metadata.cs" />
+    <Compile Include="Models\PartialClasses.cs" />
     <Compile Include="Models\Producten.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
