--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124514.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124514&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;PERSIST SECURITY INFO=True;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
