added a table to the database for many to many relationship support now the password is not visable in the smstester and will be hidden by dots

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -236,6 +236,9 @@
     <Compile Include="Models\Klanten.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Klanten2Producten.cs">
+      <DependentUpon>AlertToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Metadata.cs" />
     <Compile Include="Models\PartialClasses.cs" />
