added the log ability - logs will be saved in c:\logs\logfile.log

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -3,20 +3,41 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
-<configuration>
+<configuration>  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124515.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124515&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;PERSIST SECURITY INFO=True;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <log4net>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="GeneralAppender"/>
+    </root>
+    <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
+      <threshold value="Info" />
+      <!--File-->
+      <file value="c:\logs\Logfile.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <!--layout part-->
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger %u - %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="log4net.Internal.Debug" value="true"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
