added a page for changing the log level Moved the advanced view of all the storingen to the admin test tools renamed the admin test tools to Admin tools

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -401,6 +401,8 @@
     <Content Include="Views\Storingen\Index.cshtml" />
     <Content Include="Views\Instellingen\Index.cshtml" />
     <Content Include="Views\Shared\_SettingsPartial.cshtml" />
+    <Content Include="Views\Instellingen\Logging.cshtml" />
+    <Content Include="Views\Instellingen\Server.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
