seperated the email and sms settings pages to 2 diffent pages moved the appsettings back to the web.config for convenience. user can now set the email and sms settings in the settingspage
some bug occurd while using the sidebar - all known bugs regarding the settingspage and the sidebar are in github issues

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -401,8 +401,9 @@
     <Content Include="Views\Storingen\Index.cshtml" />
     <Content Include="Views\Instellingen\Index.cshtml" />
     <Content Include="Views\Shared\_SettingsPartial.cshtml" />
-    <Content Include="Views\Instellingen\Logging.cshtml" />
-    <Content Include="Views\Instellingen\Server.cshtml" />
+    <Content Include="Views\Instellingen\logging.cshtml" />
+    <Content Include="Views\Instellingen\smsgateway.cshtml" />
+    <Content Include="Views\Instellingen\emailserver.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
