--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -30,14 +30,19 @@
       </layout>
     </appender>
   </log4net>
-  
-  
+
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Internal.Debug" value="true" />
+    <add key="SMSGatewayIP" value="172.31.0.14" />
+    <add key="SMSGatewayUsername" value="admin123" />
+    <add key="SMSGatewayPassword" value="admin" />
+    <add key="EmailServerIP" value="email.ucsystems.net" />
+    <add key="EmailServerPort" value="25" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
