--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -43,6 +43,9 @@
     <add key="SMSGatewayPassword" value="admin" />
     <add key="EmailServerIP" value="email.ucsystems.net" />
     <add key="EmailServerPort" value="25" />
+    <add key="SignatureDirectory" value="/Signature" />
+    <add key="SignatureImage" value="Signaturelogo.png" />
+    <add key="SignatureText" value="Met vriendelijke groet, Het UC systems tech team" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
