added a try catch for the sms sending tool - to prevent a big error

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -407,6 +407,7 @@
     <Content Include="Views\Instellingen\smsgateway.cshtml" />
     <Content Include="Views\Instellingen\emailserver.cshtml" />
     <Content Include="Views\Instellingen\emailtemplate.cshtml" />
+    <Content Include="Views\Shared\_MessagePartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
