started with the response functie, so the user gets a message when he changes the smtp sever or sms server

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -39,7 +39,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Internal.Debug" value="true" />
     <add key="SMSGatewayIP" value="172.31.0.14" />
-    <add key="SMSGatewayUsername" value="admin123" />
+    <add key="SMSGatewayUsername" value="admin123s545" />
     <add key="SMSGatewayPassword" value="admin" />
     <add key="EmailServerIP" value="email.ucsystems.net" />
     <add key="EmailServerPort" value="31000" />
