admin can now make a storing and all connected users will receive a email

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -41,8 +41,9 @@
     <add key="SMSGatewayIP" value="172.31.0.14" />
     <add key="SMSGatewayUsername" value="admin123s545" />
     <add key="SMSGatewayPassword" value="admin" />
-    <add key="EmailServerIP" value="email.ucsystems.net" />
-    <add key="EmailServerPort" value="31000" />
+    <add key="EmailServerIP" value="mx1.ucsystems.net" />
+    <add key="EmailServerPort" value="587" />
+    <add key="EmailSendingMailAddress" value="test@ucsystems" />
     <add key="SignatureDirectory" value="/Signature" />
     <add key="SignatureImage" value="Signaturelogo.png" />
     <add key="SignatureText" value="Met vriendelijke groet, Het UC systems tech team" />
