--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Models\Producten.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RapporterenViewModel.cs" />
     <Compile Include="Models\SMSViewModel.cs" />
     <Compile Include="Models\Storingen.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
