corrected some error's in the sending email part of the rapporterencontroller

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -43,7 +43,7 @@
     <add key="SMSGatewayPassword" value="admin" />
     <add key="EmailServerIP" value="mx1.ucsystems.net" />
     <add key="EmailServerPort" value="587" />
-    <add key="EmailSendingMailAddress" value="test@ucsystems" />
+    <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
     <add key="SignatureDirectory" value="/Signature" />
     <add key="SignatureImage" value="Signaturelogo.png" />
     <add key="SignatureText" value="Met vriendelijke groet, Het UC systems tech team" />
