Moved the saving of the appsettings to a seperate function - the return message is still not working #5  Because the website will 'restart' and couse the loss of all filled variables

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Controllers\RapporterenController.cs" />
     <Compile Include="Controllers\StoringenController.cs" />
     <Compile Include="Controllers\TestersController.cs" />
+    <Compile Include="Functions\Appsettings\Edit.cs" />
     <Compile Include="Functions\Email\Sending.cs" />
     <Compile Include="Functions\Email template\Get.cs" />
     <Compile Include="Functions\Email template\Set.cs" />
