--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -40,7 +40,7 @@
     <add key="log4net.Internal.Debug" value="true" />
     <add key="SMSGatewayIP" value="172.31.0.14" />
     <add key="SMSGatewayUsername" value="admin123s545" />
-    <add key="SMSGatewayPassword" value="admin" />
+    <add key="SMSGatewayPassword" value="adminADad" />
     <add key="EmailServerIP" value="mx1.ucsystems.net" />
     <add key="EmailServerPort" value="587" />
     <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
