Started with the email preview venster

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -46,8 +46,9 @@
     <add key="EmailServerPort" value="587" />
     <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
     <add key="SignatureDirectory" value="signature" />
+    <add key="signaturePath" value="C:\Users\m88_d\Documents\UC-alert-tool-files\signature\signaturelogo.png" />
     <add key="SignatureImage" value="signaturelogo.png" />
-    <add key="SignatureText" value="Met vriendelijke groet, Het UC systems tech team" />
+    <add key="SignatureText" value="Met vriendelijke groet,&#xD;&#xA;Het UC Systems team" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
