user gets a preview of the signature message

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -38,15 +38,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Internal.Debug" value="true" />
-    <add key="FileDirectory" value="UC-alert-tool-files" />
     <add key="SMSGatewayIP" value="172.31.0.14" />
     <add key="SMSGatewayUsername" value="admin123s545" />
     <add key="SMSGatewayPassword" value="adminADad" />
     <add key="EmailServerIP" value="mx1.ucsystems.net" />
     <add key="EmailServerPort" value="587" />
     <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
-    <add key="SignatureDirectory" value="signature" />
-    <add key="signaturePath" value="C:\Users\m88_d\Documents\UC-alert-tool-files\signature\signaturelogo.png" />
+    <add key="SignatureDirectory" value="~/signature" />
+    <add key="signaturePath" value="/signature/signaturelogo.png" />
     <add key="SignatureImage" value="signaturelogo.png" />
     <add key="SignatureText" value="Met vriendelijke groet,&#xD;&#xA;Het UC Systems team" />
   </appSettings>
