Migrated the appsettings from web.config to a database table and changed all configrationmanger  refences to the new database table

--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -256,6 +256,9 @@
       <DependentUpon>AlertToolModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\RapporterenViewModel.cs" />
+    <Compile Include="Models\Settings.cs">
+      <DependentUpon>AlertToolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SMSViewModel.cs" />
     <Compile Include="Models\Storingen.cs">
       <DependentUpon>AlertToolModel.tt</DependentUpon>
