added change feedback so the user knows the log level has been changed The settings pages will now redirect to the settings main page for feedback added feedback to the email template changer

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -38,6 +38,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="log4net.Internal.Debug" value="true" />
+    
+    <!--This part will not be used, and is only for information purposes -->
     <add key="SMSGatewayIP" value="172.31.0.14" />
     <add key="SMSGatewayUsername" value="admin123s545" />
     <add key="SMSGatewayPassword" value="adminADad" />
