--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -11,20 +11,25 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124515.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124515&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HangfireConnection" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UC alert tool-Hangfire.mdf;Initial Catalog=aspnet-UC alert tool-Hangfire;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
     <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;PERSIST SECURITY INFO=True;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <log4net>
     <root>
       <level value="ALL" />
       <appender-ref ref="GeneralAppender" />
+      <logger additivity="false" name="Hangfire">
+        <level value="INFO" />
+        <appender-ref ref="HangfireLoggerAppender" />
+      </logger>>
     </root>
     <appender name="GeneralAppender" type="log4net.Appender.FileAppender">
       <threshold value="Info" />
-      <!--File-->
       <file value="c:\logs\Logfile.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <!--layout part-->
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %level %logger %u - %message%newline" />
       </layout>
@@ -55,7 +60,7 @@
     <authentication mode="None" />
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
