--- a/UC alert tool/packages.config
+++ b/UC alert tool/packages.config
@@ -5,9 +5,11 @@
   <package id="cldrjs" version="0.4.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
+  <package id="Hangfire" version="1.6.9" targetFramework="net452" />
+  <package id="Hangfire.Core" version="1.6.9" targetFramework="net452" />
+  <package id="Hangfire.SqlServer" version="1.6.9" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
-  <package id="jquery-globalize" version="1.2.2" targetFramework="net452" />
   <package id="log4net" version="2.0.7" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net452" />
