fixed problem that the error message was not shown to the user after a redirect added a check if file extension is a .png file for the signature

--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -41,16 +41,16 @@
     <add key="log4net.Internal.Debug" value="true" />
     
     <!--This part will not be used, and is only for information purposes -->
-    <add key="SMSGatewayIP" value="172.31.0.14" />
-    <add key="SMSGatewayUsername" value="admin123s545" />
-    <add key="SMSGatewayPassword" value="adminADad" />
-    <add key="EmailServerIP" value="mx1.ucsystems.net" />
-    <add key="EmailServerPort" value="587" />
+    <add key="SMSGatewayIP" value="172.0.0.1" />
+    <add key="SMSGatewayUsername" value="admin" />
+    <add key="SMSGatewayPassword" value="adminPassword" />
+    <add key="EmailServerIP" value="mail.ucsystems.net" />
+    <add key="EmailServerPort" value="25" />
     <add key="EmailSendingMailAddress" value="test@ucsystems.nl" />
     <add key="SignatureDirectory" value="~/signature" />
     <add key="signaturePath" value="/signature/signaturelogo.png" />
     <add key="SignatureImage" value="signaturelogo.png" />
-    <add key="SignatureText" value="Met vriendelijke groet,&#xD;&#xA;Het UC Systems team" />
+    <add key="SignatureText" value="Met vriendelijke groet, Het UC Systems team" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
