--- a/UC alert tool/Web.config
+++ b/UC alert tool/Web.config
@@ -11,9 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-UC alert tool-20170113124515.mdf&quot;;Initial Catalog=&quot;aspnet-UC alert tool-20170113124515&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="HangfireConnection" 
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UC alert tool-Hangfire.mdf;Initial Catalog=aspnet-UC alert tool-Hangfire;Integrated Security=True" 
-         providerName="System.Data.SqlClient" />
+    <add name="HangfireConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UC alert tool-Hangfire.mdf;Initial Catalog=aspnet-UC alert tool-Hangfire;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="alertDatabaseEntities" connectionString="metadata=res://*/Models.AlertToolModel.csdl|res://*/Models.AlertToolModel.ssdl|res://*/Models.AlertToolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;PERSIST SECURITY INFO=True;initial catalog=alertDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <log4net>
@@ -31,8 +29,6 @@
       </layout>
     </appender>
   </log4net>
-
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
