--- a/UC alert tool/UC alert tool.csproj
+++ b/UC alert tool/UC alert tool.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\StoringenController.cs" />
     <Compile Include="Controllers\TestersController.cs" />
     <Compile Include="Functions\Appsettings\Edit.cs" />
+    <Compile Include="Functions\Appsettings\Get.cs" />
     <Compile Include="Functions\Email\Information.cs" />
     <Compile Include="Functions\Email\Sending.cs" />
     <Compile Include="Functions\Email template\Set.cs" />
